--- a/TorrentWizard/TorrentWizard_9.vcproj
+++ b/TorrentWizard/TorrentWizard_9.vcproj
@@ -83,6 +83,7 @@
 				LinkIncremental="2"
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
+				DelayLoadDLLs="version.dll;comdlg32.dll;winspool.drv;shell32.dll;shlwapi.dll;ole32.dll;oleaut32.dll;oleacc.dll;ws2_32.dll"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -168,6 +169,7 @@
 				LinkIncremental="2"
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
+				DelayLoadDLLs="version.dll;comdlg32.dll;winspool.drv;shell32.dll;shlwapi.dll;ole32.dll;oleaut32.dll;oleacc.dll;ws2_32.dll"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="17"
@@ -257,6 +259,7 @@
 				LinkIncremental="1"
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
+				DelayLoadDLLs="version.dll;comdlg32.dll;winspool.drv;shell32.dll;shlwapi.dll;ole32.dll;oleaut32.dll;oleacc.dll;ws2_32.dll"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -349,6 +352,7 @@
 				LinkIncremental="1"
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
+				DelayLoadDLLs="version.dll;comdlg32.dll;winspool.drv;shell32.dll;shlwapi.dll;ole32.dll;oleaut32.dll;oleacc.dll;ws2_32.dll"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
