--- a/skin-installer/Skin_9.vcproj
+++ b/skin-installer/Skin_9.vcproj
@@ -73,6 +73,7 @@
 				AdditionalLibraryDirectories=""
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
+				DelayLoadDLLs="comctl32.dll;shlwapi.dll"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
 				KeyFile=""
@@ -156,6 +157,7 @@
 				AdditionalLibraryDirectories=""
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
+				DelayLoadDLLs="comctl32.dll;shlwapi.dll"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
 			/>
@@ -241,6 +243,7 @@
 				AdditionalLibraryDirectories=""
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
+				DelayLoadDLLs="comctl32.dll;shlwapi.dll"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -331,6 +334,7 @@
 				AdditionalLibraryDirectories=""
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
+				DelayLoadDLLs="comctl32.dll;shlwapi.dll"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
